[package]
name = "tree-sitter-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib"]

[[example]]
name = "cpp_example"

[dependencies]
rust-embed="6.2.0"
tree-sitter = "0.20.0"
serde_json = "1.0"
serde = "*"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dev-dependencies]
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp" }
tree-sitter-wgsl = { git = "https://github.com/davidar/tree-sitter-wgsl", rev = "cacbfbd" }
tokio = { version = "1.13.0", features = ["full"] }

