[package]
name = "tree-sitter-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib"]

[[example]]
name = "orsl_example"

[dependencies]
rust-embed="6.4"
tree-sitter = "0.20"
serde_json = "1.0"
serde = "1.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dev-dependencies]
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp" }
# tree-sitter-orsl = {git="ssh://git@github.com/theaspirational/tree_sitter_orsl.git"}
tree-sitter-orsl = {git="ssh://git@github.com/theaspirational/tree_sitter_orsl.git"}
tree-sitter-python = { git = "https://github.com/tree-sitter/tree-sitter-python" }
tree-sitter-wgsl = "0.0.6"
tokio = { version = "1.19", features = ["full"] }

